...
) {
    LazyVerticalGrid(
        columns = Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("FavoriteList")
    ) {
        items(favoriteSeries, key = { it.id }) {
            SeriesItem(
                seriesId = it.id,
                posterPath = it.posterPath ?: "",
                name = it.name,
                firstAirDate = it.firstAirDate ?: "",
                vote = it.voteAverage,
                onClickListener = { id ->
                    onNavigateDetail(id)
                },
                modifier = Modifier.testTag("FavoriteItem")
            )
        }
    }
}
