...
                onClick = { navigateBack() },
                backgroundColor = Color.White,
                contentColor = DarkBlue,
                modifier = Modifier
                    .align(Alignment.TopStart)
                    .padding(start = 16.dp, top = 16.dp)
                    .testTag("BackButton")
            ) {
                Icon(imageVector = Icons.Default.ArrowBack, contentDescription = stringResource(id = R.string.action_back))
            }
            FloatingActionButton(
                onClick = {
                    if (viewModel.isFavorite) {
...
                },
                backgroundColor = DarkBlue,
                contentColor = Color.White,
                modifier = Modifier
                    .align(Alignment.TopEnd)
                    .padding(top = 16.dp, end = 16.dp)
                    .testTag("FavoriteButton")
            ) {
                Icon(
                    imageVector = if (viewModel.isFavorite) Icons.Filled.Favorite else Icons.Outlined.FavoriteBorder,
                    contentDescription = stringResource(id = R.string.action_back)
                )
            }
...
