...
        backgroundColor = DarkBlue,
        contentColor = Color.White,
        navigationIcon = {
            if (isBackVisible) {
                IconButton(
                    onClick = { onBackClick() },
                    modifier = Modifier.testTag("BackButton")
                ) {
                    Icon(imageVector = Icons.Default.ArrowBack, contentDescription = stringResource(id = R.string.action_back))
                }
            } else {
                Icon(
                    painter = painterResource(id = R.drawable.ic_logo),
...
